[project]
name = "dualpath-lrm"
version = "0.1.0"
description = "MCP server: diff-only context packages for coding agents (LocalResourceManager)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["mcp>=1.0.0"]

[project.scripts]
dualpath-lrm = "dualpath_lrm.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dualpath_lrm"]
